tests/ui/unpretty/mir-unpretty.stderr
error[E0308]: mismatched types
  --> $DIR/mir-unpretty.rs:4:17
   |
LL |     let x: () = 0;
   |            --   ^ expected `()`, found integer
   |            |
   |            expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
